--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,53 +1,37 @@
 ---
 
-
+import { Icon } from 'astro-icon/components'
 const { title } = Astro.props;
+
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
+		
 		<title>{title}</title>
 	</head>
 	<body>
-		<p>
-			<a href="">inicio</a>
-			<a href="contacto"> contacto</a>
-		</p>
+		<header class="h-16 felx  bg-green-50 flex items-center">
+		<div class=" flex flex-row justify-between container max-w-[1200px] mx-auto" >
+			<img src="logo duolingp.svg" alt="">
+			<a class=" relative  group gohover:text-[#50d71e] flex flex-row items-center text-gray-400 font-extrabold uppercase text-gray-400" href="#">
+				idioma de la pagina
+				<Icon name="mdi:chevron-down" />
+				<div class=" absolute top-7 hidden group-hover:block ">
+					opcion de menu
+				</div>
+
+			</a>
+			
+		</div>
+
+
+		</header>
 		<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #f4f5f7;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
