--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,8 @@ const { title } = Astro.props;
 				idioma de la pagina
 				<Icon name="mdi:chevron-down" />
 				<div class=" absolute top-7 hidden group-hover:block ">
-					opcion de menu
+					<h1>1</h1><Icon name="flagpack:lr">
+					
 				</div>
 
 			</a>
@@ -32,6 +33,30 @@ const { title } = Astro.props;
 
 
 		</header>
+		<div class=" flex justify-center mt-32 mx-auto ">
+			<div class="max-w-lg">
+				<img src="/duolingo promo.svg" alt="">
+			</div>
+				<div class="  w-1/3  flex items-center flex-col justify-center">
+					<h1 class="text-3xl text-center font-extrabold text-slate-700 ">
+						¡La forma divertida, efectiva y
+					 gratis de aprender un idioma!
+					</h1>
+					<div class="  text-white font-bold rounded-lg border-b-4 border-[#559524]  mt-10 mb-4 hover:cursor-pointer hover:bg-[#a4e473]  flex justify-center items-center w-80 h-10 bg-[#58CC02]">
+						EMPIEZA AHORA
+					</div>
+					
+					<div class=" text-[#1cb0f6] font-bold rounded-lg border-b-4 border-gray-300 	border-2  hover:cursor-pointer hover:bg-gray-200  flex justify-center items-center w-80 h-10 bg-[#fcfdfc]">
+						YA TENGO CUENTA
+					</div>
+				</div>
+				
+			
+		</div>	
+		
+		<Icon name="flagpack:lr" size={64}/>
+
+		
 		<slot />
 	</body>
 </html>
