--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,9 +53,21 @@ const { title } = Astro.props;
 				
 			
 		</div>	
-		
-		<Icon name="flagpack:lr" size={64}/>
+		<div class="bg-white w-full h-[80px] mt-[180px] border-y-4 flex justify-center">
+			<div class="bg-red-400 h-[28.97px] w-[948px] m-auto flex items-center">
+				<a href="#" class="h-f">
 
+					<Icon name="mdi:arrow-left-thick" />
+				</a>
+			</div>
+			
+
+
+
+		</div>
+		
+		<div class="h-[1348px] "></div>
+		
 		
 		<slot />
 	</body>
